--- a/incubator/fluentd-elasticsearch/templates/daemonset.yaml
+++ b/incubator/fluentd-elasticsearch/templates/daemonset.yaml
@@ -41,6 +41,14 @@ spec:
         env:
         - name: FLUENTD_ARGS
           value: --no-supervisor -q
+        - name: OUTPUT_HOST
+          value: {{ .Values.elasticsearch.host | quote }}
+        - name: OUTPUT_PORT
+          value: {{ .Values.elasticsearch.port | quote }}
+        - name: OUTPUT_BUFFER_CHUNK_LIMIT
+          value: {{ .Values.elasticsearch.buffer_chunk_limit | quote }}
+        - name: OUTPUT_BUFFER_QUEUE_LIMIT
+          value: {{ .Values.elasticsearch.buffer_queue_limit | quote }}
         resources:
 {{ toYaml .Values.resources | indent 10 }}
         volumeMounts:
