--- a/incubator/logstash/values.yaml
+++ b/incubator/logstash/values.yaml
@@ -27,6 +27,8 @@ configData: {}
 livenessProbe:
   initialDelaySeconds: 60
   periodSeconds: 20
+readinessProbe:
+  initialDelaySeconds: 120
 
 ingress:
   enabled: false
