--- a/incubator/kafka/values.yaml
+++ b/incubator/kafka/values.yaml
@@ -33,8 +33,8 @@ updateStrategy:
 ## The name of the storage class which the cluster should use.
 # storageClass: default
 
-## The subpath within the Kafka container's PV where logs will be stored
-## This is combined with `dataDirectory` above, to create, by default: /opt/kafka/data/logs
+## The subpath within the Kafka container's PV where logs will be stored.
+## This is combined with `persistence.mountPath`, to create, by default: /opt/kafka/data/logs
 logSubPath: "logs"
 
 ## Pod scheduling preferences.
@@ -57,15 +57,16 @@ persistence:
   ## A manually managed Persistent Volume and Claim. Requires persistence.enabled: true.
   ## If defined, PVC must be created manually before volume will be bound
   ##
-  # existingClaim:
+  #existingClaim: "my-pvc-name"
 
   ## The size of the PersistentVolume to allocate to each Kafka Pod in the StatefulSet. For
   ## production servers this number should likely be much larger.
   ##
   size: "1Gi"
 
-  ## The location within the Kafka container where the PV will mount its storage and Kafka will store
-  ## its logs
+  ## The location within the Kafka container where the PV will mount its storage and Kafka will
+  ## store its logs.
+  ##
   mountPath: "/opt/kafka/data"
 
   ## The storageClass to use for Kafka's PersistentVolume
@@ -77,7 +78,9 @@ persistence:
   ##
   # storageClass: "-"
 
-  annotations: {}
+  ## Custom PVC annotations.
+  ##
+  #annotations: {}
 
 # ------------------------------------------------------------------------------
 # Zookeeper:
